--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,10 +1,20 @@
+html {
+    height: 100%;
+    width: 100%;
+}
+
+body {
+    min-height: 100%;
+    min-width: 100%;
+
+}
+
 /* The background picture design*/
 
 .background {
     position: relative;
     width: 100%;
     height: 100%;
-    background-size: 1920px 400px;
     border: 2px solid rgb(104, 103, 103);
     border-radius: 10px 10px 10px 10px;
     margin-top: -12%;
@@ -114,6 +124,14 @@
     font-family: 'Poppins', sans-serif;
     margin-left: 200px;
 }
+
+.addWindow {
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    color: black;
+}
+
+
 
 
 /* The Close Button */
@@ -297,7 +315,30 @@ body {
 
 /* the footer design for our Website */
 
+
+
 .footer-basic {
+    padding: 40px 0;
+    background-color: #ffffff;
+    color: #4b4c4d;
     text-align: center;
     justify-content: end;
+}
+
+.footer-basic .kontaktLink {
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: bolder;
+    color: #22447b;
+    display: block;
+    text-decoration: none;
+}
+
+
+.footer-basic .copyright {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 13px;
+    color: #aaa;
+    margin-bottom: 0;
 }
