--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -6,8 +6,9 @@ html {
 body {
     min-height: 100%;
     min-width: 100%;
-
+    margin: 0px !important;
 }
+
 
 /* The background picture design*/
 
@@ -15,9 +16,12 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
-    border: 2px solid rgb(104, 103, 103);
+    /* border: 2px solid rgb(104, 103, 103); */
     border-radius: 10px 10px 10px 10px;
     margin-top: -12%;
+    max-height: 422px;
+    object-fit: cover;
+    object-position: bottom;
 }
 
 
@@ -132,8 +136,6 @@ body {
 }
 
 
-
-
 /* The Close Button */
 
 .close {
@@ -175,8 +177,6 @@ body {
     box-shadow: inset 0px 0px 10px black, 0px 0px 15px #d3cdc5;
 }
 
-
-
 #chooseOption {
     font: 30px;
     font-family: 'Poppins', sans-serif;
@@ -198,7 +198,6 @@ body {
     border-radius: 10px 10px 10px 10px;
     margin: 5%;
 }
-
 
 
 /* home, ziel and Abstimmung design*/
@@ -223,7 +222,6 @@ li {
 /* Article cards design */
 
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
-
 body {
     font-family: 'PT Sans', sans-serif;
     font-size: 100%;
@@ -300,12 +298,10 @@ body {
     .site-container {
         max-width: 608px;
     }
-
     .article-card {
         display: grid;
         grid-template-rows: 220px 1fr;
     }
-
     @media screen and (min-width: 1280px) {
         .site-container {
             max-width: 1156px;
@@ -313,9 +309,8 @@ body {
     }
 }
 
+
 /* the footer design for our Website */
-
-
 
 .footer-basic {
     padding: 40px 0;
@@ -333,7 +328,6 @@ body {
     display: block;
     text-decoration: none;
 }
-
 
 .footer-basic .copyright {
     margin-top: 15px;
