--- a/public/css/zielesheet.css
+++ b/public/css/zielesheet.css
@@ -4,11 +4,12 @@
     position: relative;
     width: 100%;
     height: 100%;
-    background-size: 1920px 400px;
-    border: 2px solid rgb(104, 103, 103);
+    /* border: 2px solid rgb(104, 103, 103); */
     border-radius: 10px 10px 10px 10px;
     margin-top: -12%;
-    backdrop-filter: blur(3px);
+    max-height: 400px;
+    object-fit: cover;
+    object-position: bottom;
 }
 
 
@@ -60,6 +61,7 @@
     font-weight: bold;
 }
 
+
 /* Login Window to know Who is on the Website */
 
 .modal {
@@ -91,8 +93,6 @@
     margin-left: 200px;
 }
 
-
-
 #famBtn {
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
@@ -112,6 +112,7 @@
     background-color: #22447b;
     color: white;
 }
+
 
 /* The Close Button */
 
@@ -175,7 +176,6 @@
     padding: 5px 10px;
     border-radius: 10px 10px 10px 10px;
 }
-
 
 
 /* home, ziel and Abstimmung design*/
@@ -301,7 +301,6 @@ li {
 /* Article cards design */
 
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
-
 body {
     font-family: 'PT Sans', sans-serif;
     font-size: 100%;
@@ -383,12 +382,10 @@ body {
     .site-container {
         max-width: 608px;
     }
-
     .article-card {
         display: grid;
         grid-template-rows: 220px 1fr;
     }
-
     @media screen and (min-width: 1280px) {
         .site-container {
             max-width: 1156px;
@@ -411,8 +408,6 @@ body {
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
 }
-
-
 
 .fullclick li {
     list-style: none;
@@ -470,8 +465,6 @@ h3 {
     height: auto;
     display: inline-block;
 }
-
-
 
 #kontakt {
     text-decoration: none;
