--- a/public/css/famsheet.css
+++ b/public/css/famsheet.css
@@ -107,6 +107,7 @@ button {
     height: 30px;
     width: 90px;
     margin: 5px;
+    margin-top: 20%;
     background-color: #333;
     color: white;
     font-weight: bold;
