--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -4,9 +4,14 @@ html {
 }
 
 body {
+    font-family: 'PT Sans', sans-serif;
+    font-size: 100%;
+    font-size: 16px;
+    line-height: 1.5;
+    background: #F0F4FB;
     min-height: 100%;
     min-width: 100%;
-    margin: 0px !important;
+    margin: 0px;
 }
 
 
@@ -16,18 +21,14 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
-    /* border: 2px solid rgb(104, 103, 103); */
+    max-height: 500px;
     border-radius: 10px 10px 10px 10px;
-    margin-top: -12%;
-    max-height: 300px;
-    object-fit: cover;
-    object-position: bottom;
+    filter: brightness(60%);
+
 }
 
 
 /* The navbar */
-
-
 /* Position the navbar container inside the image */
 
 .container {
@@ -57,20 +58,36 @@ body {
 .topic {
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
-    position: sticky;
+    font-size: 50px;
     z-index: 1;
-    display: grid;
-    margin-right: 40%;
-    margin-left: 40%;
-    margin-bottom: -3%;
-    margin-top: 10%;
+    position: absolute;
+    top: 30%;
+    left: 53%;
+    margin-top: -100px;
+    margin-left: -200px;
     padding: 10px;
-    right: 80%;
     border-radius: 20px;
     color: white;
     font-style: italic;
-    justify-content: center;
     backdrop-filter: blur(10px);
+}
+
+.topicSmall {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    font-size: 50px;
+    z-index: 1;
+    position: absolute;
+    top: 30%;
+    left: 55%;
+    margin-left: -200px;
+    margin-top: -100px;
+    padding: 10px;
+    border-radius: 20px;
+    color: white;
+    font-style: italic;
+    backdrop-filter: blur(10px);
+
 }
 
 #famBtn {
@@ -84,7 +101,8 @@ body {
     border-radius: 5px;
     background-color: white;
     border: 1px solid grey;
-    margin-left: 45%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #famBtn:hover {
@@ -221,17 +239,6 @@ li {
 
 /* Article cards design */
 
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
-body {
-    font-family: 'PT Sans', sans-serif;
-    font-size: 100%;
-    font-size: 16px;
-    line-height: 1.5;
-    background: #F0F4FB;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
 .site-container {
     margin: 32px auto;
     max-width: calc(100%-80px);
@@ -271,10 +278,13 @@ body {
 
 .article-content {
     overflow: hidden;
+    font-size: 15px;
+    font-weight: 600;
+    text-decoration: none;
 }
 
 .article-content .card-category {
-    font-size: 0.875rem;
+    font-size: 13px;
     text-transform: uppercase;
     letter-spacing: 0.1em;
     font-weight: 600;
@@ -294,14 +304,35 @@ body {
     margin: 0;
 }
 
+#holidayPlan {
+    font-family: 'FontAwesome';
+
+}
+
+#locationTxt {
+
+    font-family: 'FontAwesome';
+
+}
+
+#descriptionTxt {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: lighter;
+    letter-spacing: 0.1em;
+}
+
+
+
 @media screen and (min-width: 768px) {
     .site-container {
         max-width: 608px;
     }
+
     .article-card {
         display: grid;
         grid-template-rows: 220px 1fr;
     }
+
     @media screen and (min-width: 1280px) {
         .site-container {
             max-width: 1156px;
