--- a/public/css/priosheet.css
+++ b/public/css/priosheet.css
@@ -14,6 +14,7 @@
     margin-top: -5%;
 }
 
+/* Priority font style on Priorisieren */
 .prio {
     font-size: 0.875rem;
     text-transform: uppercase;
@@ -24,6 +25,7 @@
     text-decoration: none;
 }
 
+/* Priority font style on Home */
 #prioTxt {
     font-size: 1rem;
     text-transform: uppercase;
@@ -34,9 +36,115 @@
     text-decoration: none;
 }
 
+/* Login button to choose which Familymember the user is */
+#famBtn {
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    font-weight: bolder;
+    color: #22447b;
+    display: block;
+    border-radius: 5px;
+    background-color: white;
+    border: 1px solid grey;
+    margin-left: auto;
+    margin-right: auto;
+}
 
-/* Priority design and Savebutton style */
+/* Hover effect */
+#famBtn:hover {
+    font-family: 'Poppins', sans-serif;
+    background-color: #22447b;
+    color: white;
+}
 
+/* Login Window to know Who is on the Website */
+/* Modal Window apperance */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* modal content and page
+adjustment for font and positioning */
+.modal-content {
+    background-color: #333;
+    margin: 15% auto;
+    padding: 50px;
+    border: 5px solid silver;
+    border-radius: 15px 15px 15px 15px;
+    width: 50%;
+}
+
+.page {
+    font-family: 'Poppins', sans-serif;
+    margin-left: 100px;
+    color: white;
+}
+
+
+
+/* The Close Button design with hover effect */
+
+.close {
+    font-family: 'Poppins', sans-serif;
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    position: inherit;
+    margin-top: -50px;
+    margin-right: -40px;
+}
+
+.close:hover {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Submit Button on the ModalWindow Apperance with hover effect */
+#submitBtn {
+    border: none;
+    font-size: 25px;
+    color: white;
+    line-height: 48px;
+    font-weight: bold;
+    cursor: pointer;
+    background-image: linear-gradient(#d3cdc5, #3a342c);
+    text-decoration: none;
+    text-shadow: 1px 1px 5px black;
+    box-shadow: inset 0px 0px 10px black;
+    border-radius: 10%/50%;
+    width: 50%;
+    display: inline-block;
+}
+
+#submitBtn:hover {
+    box-shadow: inset 0px 0px 10px black, 0px 0px 15px #d3cdc5;
+}
+
+
+/* choose Option of Familymember to login */
+#chooseDropFam {
+    min-width: 100px;
+    font-weight: bold;
+    box-shadow: #333;
+    padding: 5px 5px;
+    border-radius: 10px 10px 10px 10px;
+}
+
+
+
+/* Article card content adjustment for slider savebutton and priority  */
 .cardFooter {
     margin: 0 30px 30px 30px;
 }
