--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -10,8 +10,10 @@ body {
 .background {
     position: relative;
     width: 100%;
-    height: 100%;
-    max-height: 500px;
+    height: 50%;
+    max-height: 350px;
+    object-fit: cover;
+    object-position: bottom;
     border-radius: 10px 10px 10px 10px;
     filter: brightness(60%);
 
@@ -27,7 +29,7 @@ body {
     z-index: 1;
     position: absolute;
     top: 30%;
-    left: 53%;
+    left: 50%;
     margin-top: -100px;
     margin-left: -200px;
     padding: 10px;
@@ -46,7 +48,7 @@ body {
     z-index: 1;
     position: absolute;
     top: 30%;
-    left: 55%;
+    left: 57%;
     margin-left: -200px;
     margin-top: -100px;
     padding: 10px;
@@ -55,6 +57,24 @@ body {
     backdrop-filter: blur(10px);
 
 }
+
+.topicMedium {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    font-size: 50px;
+    z-index: 1;
+    position: absolute;
+    top: 30%;
+    left: 54%;
+    margin-left: -200px;
+    margin-top: -100px;
+    padding: 10px;
+    border-radius: 20px;
+    color: white;
+    backdrop-filter: blur(10px);
+
+}
+
 
 
 /* The navbar */
